--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>안녕 깃 !!</h1>
     <p>수정했습니다!! (new file,modified,delete)</p>
     <p>git diff 로 수정된 내역 확인</p>
+    <p>수정 3 새파일 만들기 및 삭제 테스트</p>
 </body>
 </html>
